--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
       "url": "git://github.com/flatiron/plates.git" 
   }],
   "devDependencies" : {
-    "vows" : "*"
+    "vows" : "*",
+    "mustache" : "*",
+    "benchmark" : "*"
   },
   "engines": ["node"],
   "main" : "./lib/index.js"
