--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "mustache" : "*",
     "benchmark" : "*"
   },
+  "scripts": {
+    "test": "vows --spec test/*test.js"
+  },
   "engines": ["node"],
   "main" : "./lib/index.js"
 }
