[dist] SemVer `devDependencies`

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
       "url": "git://github.com/flatiron/plates.git" 
   }],
   "devDependencies" : {
-    "vows" : "*",
-    "mustache" : "*",
-    "benchmark" : "*"
+    "vows" : "0.5.x",
+    "mustache" : "0.3.x",
+    "benchmark" : "0.2.x"
   },
   "scripts": {
     "test": "vows --spec test/*test.js"
